# viet-ki

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  build-mac.sh  build-ubuntu.sh  build-windows.cmd  build-windows.ps1
assets/: VietKi.icns
core/include/vietki/: engine.h  gaming.h
core/src/: engine.cpp  gaming.cpp  internal.h  syllable.cpp  telex.cpp  tone_placement.cpp  vni.cpp
linux/src/: app.h  engine_ibus.cpp  engine_ibus.h  hook.cpp  injector.cpp  main.cpp  overlay.cpp  tray.cpp
macos/: Info.plist
macos/src/: EventTap.mm  Injector.mm  PasteInject.mm  Settings.mm  app.h  main.mm  typing_stats.h  typing_stats.mm
packaging/: vietki.xml
tests/: engine_tests.cpp  gaming_tests.cpp
windows/: app.manifest  resources.rc
windows/src/: app.h  config.cpp  hook.cpp  injector.cpp  main.cpp  omnibox_probe.cpp  overlay.cpp  paste_inject.cpp  resource.h  settings.cpp  tray.cpp  typing_stats.cpp  typing_stats.h
